used z-index for corgis top-hat correction

--- a/students-code-here.css
+++ b/students-code-here.css
@@ -18,3 +18,6 @@
     position: sticky;
     left: 0;
 }
+.top-hat {
+    z-index: 1;
+}
